# bge-m3-server

./: Dockerfile  README.md  pyproject.toml  server.py
enums/: embedding_type.py
schemas/: embedding_request.py  embedding_response.py  reranker_request.py  reranker_response.py
